# i4z_ide

./: COMPREHENSIVE_MOUSE_FIX.md  Cargo.toml  FOCUSED_BORDERS.md  MOUSE_COORDINATE_FIX.md  README.md  TABS_INSIDE_EDITOR.md  TUI_REFACTORING.md  about_project.md  test_scroll.rs
src/: api.rs  cli.rs  clipboard.rs  config.rs  conversation.rs  main.rs  tui_simple.rs
src/agent/: actions.rs  executor.rs  mod.rs
src/ide/: app.rs  editor.rs  events.rs  layout.rs  mod.rs  sidebar.rs  statusbar.rs
src/ide/sidebar/: chat.rs  file_explorer.rs  notifications.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/tui/panels/: chat.rs  editor.rs  file_explorer.rs  mod.rs  status_bar.rs
